Setup de l'interface client et de la classe ChatServer, et suppression de classes obsolètes